--- a/ios/LHMessage/Info.plist
+++ b/ios/LHMessage/Info.plist
@@ -40,6 +40,12 @@
 	<string>This app uses the local network to discover and connect to nearby devices for chat functionality.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to send images in chat.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to take photos for chat.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your microphone for voice messages.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
