--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-native": "0.79.3",
     "react-native-device-info": "^14.0.4",
     "react-native-gifted-chat": "^2.3.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-controller": "^1.17.3",
     "react-native-permissions": "^5.4.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -37,6 +39,7 @@
     "@react-native/typescript-config": "0.79.3",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
