--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "lib": ["ESNext", "ES6", "ES2020", "ES2022"],
+    "forceConsistentCasingInFileNames": true
+  }
 }
